--- a/package.json
+++ b/package.json
@@ -14,10 +14,11 @@
     "dist"
   ],
   "scripts": {
-    "dev": "vite",
+    "dev": "storybook dev -p 3000",
+    "lint": "ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} && prettier --check src/**/**/*.{ts,tsx}",
+    "format": "prettier --write src/**/**/*.{ts,tsx} && ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} --fix",
     "build": "tsc && vite build",
     "build:watch": "tsc && vite build --watch",
-    "storybook": "storybook dev -p 6006",
     "build-storybook": "storybook build"
   },
   "peerDependencies": {
@@ -25,6 +26,7 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
+    "@eslint/js": "^8.38.0",
     "@storybook/addon-essentials": "^7.0.2",
     "@storybook/addon-interactions": "^7.0.2",
     "@storybook/addon-links": "^7.0.2",
@@ -35,8 +37,13 @@
     "@types/node": "^18.15.11",
     "@types/react": "^18.0.28",
     "@types/react-dom": "^18.0.11",
+    "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "eslint": "^8.38.0",
+    "eslint-config-prettier": "^8.8.0",
+    "eslint-plugin-react": "^7.32.2",
     "path": "^0.12.7",
+    "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
