--- a/package.json
+++ b/package.json
@@ -8,18 +8,25 @@
     ".": {
       "require": "./dist/plasmatic.cjs",
       "import": "./dist/plasmatic.es.js"
+    },
+    "./styles.css": {
+      "require": "./dist/styles.css",
+      "default": "./dist/styles.css"
     }
   },
   "files": [
     "dist"
   ],
   "scripts": {
-    "dev": "storybook dev -p 3000",
+    "dev": "concurrently \"pnpm run build:css:watch\" \"storybook dev -p 3000\"",
     "lint": "ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} && prettier --check src/**/**/*.{ts,tsx}",
     "format": "prettier --write src/**/**/*.{ts,tsx} && ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} --fix",
-    "build": "tsc && vite build",
+    "build": "tsc && vite build && pnpm run build:css",
+    "build:css": "tailwindcss -m -i ./src/tailwind.css -o ./dist/styles.css",
+    "build:css:watch": "tailwindcss -w -i ./src/tailwind.css -o ./dist/styles.css",
     "build:watch": "tsc && vite build --watch",
-    "build-storybook": "storybook build",
+    "build-storybook": "concurrently \"pnpm run build-storybook:css\" \"storybook build\"",
+    "build-storybook:css": "tailwindcss -w -i ./src/tailwind.css -o ./src/index.css",
     "prepare": "husky install",
     "chromatic": "npx chromatic"
   },
@@ -41,18 +48,22 @@
     "@types/react-dom": "^18.0.11",
     "@typescript-eslint/parser": "^5.57.1",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "autoprefixer": "^10.4.14",
     "chromatic": "^6.17.3",
+    "concurrently": "^8.0.1",
     "eslint": "^8.38.0",
     "eslint-config-prettier": "^8.8.0",
     "eslint-plugin-react": "^7.32.2",
     "husky": "^8.0.3",
     "lint-staged": "^13.2.1",
     "path": "^0.12.7",
+    "postcss": "^8.4.21",
     "prettier": "^2.8.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^7.0.2",
+    "tailwindcss": "^3.3.1",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
     "vite-plugin-dts": "^2.2.0",
