Improve prettier configurations

--- a/package.json
+++ b/package.json
@@ -25,8 +25,8 @@
     "build:css": "tailwindcss -m -i ./src/tailwind.css -o ./dist/styles.css",
     "build:css:watch": "tailwindcss -w -i ./src/tailwind.css -o ./dist/styles.css",
     "build:watch": "tsc && vite build --watch",
-    "build-storybook": "concurrently \"pnpm run build-storybook:css\" \"storybook build\"",
-    "build-storybook:css": "tailwindcss -w -i ./src/tailwind.css -o ./src/index.css",
+    "build-storybook": "pnpm run build-storybook:css && storybook build",
+    "build-storybook:css": "tailwindcss -i ./src/tailwind.css -o ./src/index.css",
     "prepare": "husky install",
     "chromatic": "npx chromatic"
   },
@@ -59,6 +59,8 @@
     "path": "^0.12.7",
     "postcss": "^8.4.21",
     "prettier": "^2.8.7",
+    "prettier-plugin-organize-imports": "^3.2.2",
+    "prettier-plugin-tailwindcss": "^0.2.7",
     "prop-types": "^15.8.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
