Fix dev command

--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "dist"
   ],
   "scripts": {
-    "dev": "concurrently \"pnpm run build:css:watch\" \"storybook dev -p 3000\"",
+    "dev": "concurrently \"pnpm run build-storybook:css:watch\" \"storybook dev -p 3000\"",
     "lint": "ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} && prettier --check src/**/**/*.{ts,tsx}",
     "format": "prettier --write src/**/**/*.{ts,tsx} && ESLINT_USE_FLAT_CONFIG=true eslint src/**/**/*.{ts,tsx} --fix",
     "build": "tsc && vite build && pnpm run build:css",
@@ -27,6 +27,7 @@
     "build:watch": "tsc && vite build --watch",
     "build-storybook": "pnpm run build-storybook:css && storybook build",
     "build-storybook:css": "tailwindcss -i ./src/tailwind.css -o ./src/index.css",
+    "build-storybook:css:watch": "tailwindcss -w -i ./src/tailwind.css -o ./src/index.css",
     "prepare": "husky install",
     "chromatic": "npx chromatic"
   },
