Add simple ThemeProvider

--- a/.prettierrc
+++ b/.prettierrc
@@ -10,5 +10,9 @@
   "requirePragma": false,
   "insertPragma": false,
   "endOfLine": "auto",
-  "plugins": ["prettier-plugin-organize-imports", "prettier-plugin-tailwindcss"]
+  "plugins": [
+    "prettier-plugin-organize-imports",
+    "prettier-plugin-tailwindcss"
+  ],
+  "organizeImportsSkipDestructiveCodeActions": true
 }
